--- a/translations/values-de/help.xml
+++ b/translations/values-de/help.xml
@@ -25,7 +25,7 @@
          \u00A0\u00A0 Dies könnte an einem Problem mit Deinen lokalen Routing-Einstellungen liegen. Siehe http://ip.junkcode.net/help \n\n
          
         <b>Immer noch keine Verbindung!</b>\n
-         \u00A0\u00A0 Du hast Dir das nicht durchgelesen http://ip.junkcode.net/help, stimmt\'s'?
+         \u00A0\u00A0 Du hast Dir das nicht durchgelesen http://ip.junkcode.net/help, stimmt\'s?
          \n
     </string>
     
