--- a/translations/values-fr/strings.xml
+++ b/translations/values-fr/strings.xml
@@ -17,10 +17,10 @@
     <string name="screenon">Garder sur mon</string>
     <string name="counters">Comptoirs</string>
     
-    <string name="ip_h">Adresse d'IP</string>
+    <string name="ip_h">Adresse d\'IP</string>
     <string name="find_ip">Trouvez IP juste</string>
     <string name="set_ip">Faites IP</string>
-    <string name="ip">IP d'ordinateur avec WarThunder (sans port) :</string>
+    <string name="ip">IP d\'ordinateur avec WarThunder (sans port) :</string>
     
     
     <string name="zoom_btns">Boutons de zoom</string>
@@ -30,12 +30,12 @@
     <string name="friendly_structures">Structures conviviale</string>
     <string name="enemy_structures">Structures ennemis</string>
     
-    <string name="updates_speed"></string>Fréquence de mises à jour</string>
+    <string name="updates_speed">Fréquence de mises à jour</string>
     <string name="how_ip">"Comment obtenir une adresse IP voir : http://ip.junkcode.net/help"</string>
     <string name="how_ip_der">"Si vous ne savez pas comment obtenir votre adresse IP cliquez ici"</string>
     <string name="ip_err">Adresse IP non valide</string>
-    <string name="ip_err_wrong">"Entrée d'adresse au format XXX.XXX.XXX.XXX, cliquez sur aide pour le guide pour obtenir la bonne."</string>
-    <string name="ip_err_local">"127.0.0.1 n'est pas l'adresse juste. \r\n Cliquent sur l'Aide pour le guide pour recevoir juste."</string>
+    <string name="ip_err_wrong">"Entrée d\'adresse au format XXX.XXX.XXX.XXX, cliquez sur aide pour le guide pour obtenir la bonne."</string>
+    <string name="ip_err_local">"127.0.0.1 n\'est pas l\'adresse juste. \r\n Cliquent sur l\'Aide pour le guide pour recevoir juste."</string>
     <string-array name="updates_speed_array">
         <item >Très Vite</item>
         <item >Vite</item>
@@ -49,7 +49,7 @@
      <string name="info_title">Informations</string>
     <string name="info_msg">
         "Cette application non officielle est fait par des fans de Warthunder!\r\n"
-        "Cette application est encore en version bêta, mais n'hésitez pas à nous contacter avec des bugs ou de nouvelles idées à:\r\n"
+        "Cette application est encore en version bêta, mais n\'hésitez pas à nous contacter avec des bugs ou de nouvelles idées à:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
         "Nous recherchons des personnes pour traduire cette application, si vous voulez aider à voir http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
@@ -59,7 +59,7 @@
         </string>
      <string name="info_update_title">Nouvelles de mise à jour</string>
      
-    <string name="version">Version de l'App:</string>
+    <string name="version">Version de l\'App:</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="ignore">Annuler</string>
@@ -67,12 +67,12 @@
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_ringtone">Sonnerie</string>
-    <string name="pref_header_data_sync">Connexion d'ordinateur</string>
+    <string name="pref_header_data_sync">Connexion d\'ordinateur</string>
     <string name="pref_ringtone_silent">Silencieux</string>
     
     <string name="nowificonnected">Vous devez connecter à votre local WiFi</string>
 
-    <string name="planeicons">Icônes d'avion</string>
+    <string name="planeicons">Icônes d\'avion</string>
     <string-array name="planes_icon_size">
         <item >Gros</item>
         <item >Moyen</item>
@@ -105,13 +105,14 @@
     
     <string name="ext_unlock">Débloquez suppléments</string>
     <string name="ext_unlock_det">
-        "Les suppléments sont débloqués par la donation <b><i>n'importe quel</i></b> la quantité ou par le contenu contribution\r\n((Si vous avez donné plus tôt et n'a pas d'obtenir le code encore Envoyez-nous un courriel email))"</string>
+        "Les suppléments sont débloqués par la donation <b><i>n\'importe quel</i></b> la quantité ou par le contenu contribution\r\n((Si vous avez donné plus tôt et n\'a pas d\'obtenir le code encore Envoyez-nous un courriel email))"</string>
     <string name="ext_unlock_dial">"Unlock Code:"</string>
     
     <string name="ext_link">Lien vers compte G+</string>
     
     <string name="firing_zone">Champ de tir</string>
-    <string name="gray_map">Carte en niveaux de gris
+    <string name="gray_map">Carte en niveaux de gris</string>
+    
     <string name="map">Carte:</string>
     <string name="custom_maps">Cartes personnalisées</string>
     <string name="custom_maps_url">Cartes personnalisées url</string>
@@ -124,7 +125,7 @@
     <string name="death_markers">Laissez crânes sur la mort</string>
 
     <string name="size">Taille</string>
-    <string name="style">Style de
+    <string name="style">Style de</string>
     <string-array name="style_types">
         <item >Vieux</item>
         <item >Nouveau</item>
