--- a/translations/values-ru/help.xml
+++ b/translations/values-ru/help.xml
@@ -35,7 +35,7 @@
          \u00A0\u00A0 Вы должны получить код на ваш e-mail в течение нескольких минут после пожертвования. Если этого не произошло напишите по адресу support@junkcode.net \n\n
          
         <b>Я ввел код, но ничего не разблокировалось</b>\n
-         \u00A0\u00A0 Попробуйте перезагрузить приложение \n\n
+         \u00A0\u00A0 Попробуйте перезапустить приложение \n\n
         
     </string>
     <string name="faq_improvement">Улучшение приложения</string>
