--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -80,8 +80,8 @@
         <item >Очень маленькие</item>
     </string-array>
     
-    <string name="lines">Направление движения</string>
-    <string name="lines_oos">Only to offscreen</string>
+    <string name="lines">Линии до объектов</string>
+    <string name="lines_oos">Только когда вне экрана</string>
     <string name="lines_enemy">Враги</string>
     <string name="lines_friendly">Союзники</string>
     <string name="lines_squad">Отряд</string>
