--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="nowificonnected">Bitte WLAN-Verbindung herstellen</string>
 
-    <string name="planeicons">Flugzeug-Symbole</string>
+    <string name="planeicons">Flugzeug-Icons</string>
     <string-array name="planes_icon_size">
       <item >Groß</item>
       <item >Mittel</item>
@@ -96,7 +96,7 @@
     <string name="waypoint_ctrl">Wegpunkt-Optionen</string>
     <string name="add">Hinzufügen</string>
 
-    <string name="horizontal_distance">Horizontalen Abstand anzeigen</string>
+    <string name="horizontal_distance">Horizontaler Abstand</string>
 
     <string name="pref_header_extras">Extras</string>
     <string name="prediction">Prognostizierung</string>
@@ -137,7 +137,7 @@
       <item>Grün/Orange</item>
       <item>Grün/Rot</item>
     </string-array>
-    <string name="colors">Farben</string>
+    <string name="colors">Farbe</string>
 
     <string name="pref_header_map_view">Map-Einstellungen</string>
     <string name="pref_header_GUI">Oberfläche</string>
