--- a/translations/values-de/help.xml
+++ b/translations/values-de/help.xml
@@ -50,7 +50,7 @@
          \u00A0\u00A0 Auch das kannst Du uns mitteilen - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
         <b>Ich würde gerne helfen (Übersetzung/Icons/...)</b>\n
-         \u00A0\u00A0 Einige Ressourcen sind bereits hier: http://github.com/JunkCode/wtTactMap Du kannst hier Änderungen vorschlagen oder neues hinzufügen. Wenn Du weitere Fragen oder Ideen hast, kannst Du uns gerne schreiben - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Einige Ressourcen sind bereits hier: http://github.com/JunkCode/wtTactMap Du kannst hier Änderungen vorschlagen oder Neues hinzufügen. Wenn Du weitere Fragen oder Ideen hast, kannst Du uns gerne schreiben - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
     </string>
     
