--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -31,11 +31,11 @@
     <string name="enemy_structures">Вражеские строения</string>
     
     <string name="updates_speed">Частота обновлений</string>
-    <string name="how_ip">"Как получить IP адрес – смотрите тут: http://ip.junkcode.net/"</string>
-    <string name="how_ip_der">"Если Вы не знаете, как получить IP адрес – нажмите здесь"</string>
-    <string name="ip_err">IP адрес неверный</string>
-    <string name="ip_err_wrong">"Введите адрес в формате \r\nXXX.XXX.XXX.XXX \r\n Кликните на "Помощь" для получения детальных инструкций."</string>
-    <string name="ip_err_local">"127.0.0.1 неверный адрес. \r\n Кликните на "Помощь" для получения детальных инструкций."</string>
+    <string name="how_ip">"Как узнать IP адрес компьютера – смотрите тут: http://ip.junkcode.net/"</string>
+    <string name="how_ip_der">"Если Вы не знаете IP адрес компьютера – нажмите здесь"</string>
+    <string name="ip_err">Неверный IP адрес</string>
+    <string name="ip_err_wrong">"Введите IP адрес в формате \r\nXXX.XXX.XXX.XXX \r\nНажмите "Помощь" для получения детальных инструкций."</string>
+    <string name="ip_err_local">"127.0.0.1 - неверный адрес. \r\nНажмите "Помощь" для получения детальных инструкций."</string>
     <string-array name="updates_speed_array">
         <item >Очень быстро</item>
         <item >Быстро</item>
@@ -48,14 +48,14 @@
 
      <string name="info_title">О приложении</string>
     <string name="info_msg">
-        "Это неофициальное приложение, сделанное для любителей War Thunder!\r\n"
-        "Это приложение всё ещё на стадии беты, но не стесняйтесь обращаться ко мне с ошибками или новыми идеями в:\r\n"
+        "Это неофициальное приложение, сделанное поклонниками War Thunder!\r\n"
+        "Это приложение всё ещё на стадии бета-теста, не стесняйтесь обращаться к нам с ошибками или новыми идеями в:\r\n"
         "http://junkcode.net/forum \r\n"
         "\r\n"
         "Перевод на русский – Антон aka "StariyMetall", Дмитрий aka "Deus_Ex_Perceptron"\r\n"        
     </string>
     <string name="donate_line">  
-        "Нравится ли вам это приложение? Скажите это пожертвованием на http://junkcode.net для будущего развития.\r\n"
+        "Вам понравилось это приложение? Выразите поддержку этому проекту, сделав пожертвование по адресу http://junkcode.net для будущего развития.\r\n"
         </string>
      <string name="info_update_title">Обновление новостей</string>
      
@@ -66,11 +66,11 @@
     <string name="help">Помощь</string>
     <string name="pref_header_notifications">Оповещения</string>
     
-    <string name="pref_title_ringtone">Рингтон</string>
-    <string name="pref_header_data_sync">Соединение с PC</string>
+    <string name="pref_title_ringtone">Звук</string>
+    <string name="pref_header_data_sync">Соединение с компьютером</string>
     <string name="pref_ringtone_silent">Без звука</string>
     
-    <string name="nowificonnected">Необходимо подключиться к WiFi</string>
+    <string name="nowificonnected">Необходимо подключиться к Wi-Fi</string>
 
     <string name="planeicons">Иконки самолётов</string>
         <string-array name="planes_icon_size">
@@ -80,7 +80,7 @@
         <item >Очень маленькие</item>
     </string-array>
     
-    <string name="lines">Линии до объектов</string>
+    <string name="lines">Линии</string>
     <string name="lines_oos">Только когда объект вне экрана</string>
     <string name="lines_enemy">Враги</string>
     <string name="lines_friendly">Союзники</string>
@@ -100,7 +100,7 @@
     
     <string name="pref_header_extras">Бонусы</string>
     <string name="prediction">Прогнозирование</string>
-    <string name="self">Я</string>
+    <string name="self">Своя</string>
     <string name="show_intro_screen">Показывать интро</string>
     
     <string name="ext_unlock">Разблокировать бонусы</string>
